--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,24 @@ html{
 }
 .size{
     margin:0rem auto;
-    min-width: 800px;
+    width: 800px;
 }
 .flex-space-between{
     display: flex;
     justify-content: space-between;
 }
+.padding-around{
+    padding: 1rem;
+}
 .generic-title{
     font-size: 1rem;
     text-transform: uppercase;
     font-weight: bold;
+}
+.generic-text{
+    text-indent: 1rem;
+    line-height: 1.5rem;
+    margin-bottom: 1rem;
 }
 .stick-top{
     position: sticky;
