--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@ html{
     display: flex;
     justify-content: space-between;
 }
+.generic-img{
+    width: 100%;
+    height: auto;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+}
 .bg-white{
     background-color: #fff;
 }
