--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ html{
 .padding-around{
     padding: 1rem;
 }
+.pading-bottom{
+    padding-bottom: 1rem;
+}
 .generic-title{
     font-size: 1rem;
     text-transform: uppercase;
