--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,14 @@ html{
     min-width: 1000px;
     background-color: #fffffa;
 }
+#logo{
+    background: url(../img/dog.avif);
+    background-size:auto 100%;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
 .size{
     margin:0rem auto;
     width: 800px;
@@ -24,12 +32,13 @@ html{
     padding: 1rem;
 }
 .padding-bottom{
-    padding-bottom: 1rem;
+    padding-bottom: 0.5rem;
 }
 .generic-title{
     font-size: 1rem;
     text-transform: uppercase;
     font-weight: bold;
+    margin-bottom: 1rem;
 }
 .generic-text{
     text-indent: 1rem;
